5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1593_2908.log
== TEST (2019-03-24 15:51:47) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do//de
print(result)

-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 15:52:23) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do//de
print(round(result,7)
-- ERROR:
File "XXXX", line 8
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 15:52:42) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do//de
print(round(result,7))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 15:53:05) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do//de
print(round(result,7))
-- EXECUTION TIME:
0.13224
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 15:53:27) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do//de
print(round(result,7))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 15:53:39) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do/de
print(round(result,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 15:53:47) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do/de
print(round(result,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 15:53:49) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do/de
print(round(result,7))
-- EXECUTION TIME:
0.142981
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:13:30) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do/de
print(round(result,7))
-- EXECUTION TIME:
0.150848
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:17:16) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do/de
print(round(result,7))
-- EXECUTION TIME:
0.180116
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:20:53) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do/de
print(round(result,7))
-- EXECUTION TIME:
0.195206
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:21:01) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do/de
print(round(result,7))
-- EXECUTION TIME:
0.145747
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:21:02) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do/de
print(round(result,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:21:13) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do/de
print(round(result,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:21:22) 
-- CODE:
a=int(input("escreva um numero: "))
b=int(input("escreva um numero: "))
c=int(input("escreva um numero: "))
do=(a**2)+(b**2)+(c**2)
de=(a+b+c)
result=do/de
print(round(result,7))
-- EXECUTION TIME:
0.224285
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
